CLN improve style and fix alignment

--- a/programme/static/programme/css/style.css
+++ b/programme/static/programme/css/style.css
@@ -84,11 +84,11 @@ a{
 }
 #page{
 	background-color: white;
-	width: 75%;
-	min-width: 900px;
 	min-height: 100%;
 	vertical-align: top;
 	margin-right: 5%;
+	width: 90%;
+	min-width: 900px;
 }
 	#page .page-content{
 		padding-top: 5em;
@@ -119,7 +119,7 @@ a{
 
 
 /*------------------------------------------------------
-						List of projects
+		List of projects
 -------------------------------------------------------*/
 .seminar{
 	background-color: rgba(128, 128, 128, .1);
@@ -127,6 +127,16 @@ a{
 	padding: 1em;
 	width: 95%;
 	display: list-item;
+}
+.seminar .register{
+	margin-left: 3ex;
+	background-color: #c8c8c8;
+	border-radius: 5pt;
+	padding: 3pt 5pt;
+	color: rgb(68, 108, 179);
+	text-decoration: none;
+	font-weight: bold;
+	float: right;
 }
 .talk{
 	background-color: rgba(203, 203, 203, .4);
@@ -212,6 +222,7 @@ a{
 		margin-left: 0;
 		margin-right: 0;
 		width: 100%;
+		min-width: unset;
 	}
 
 	#page .page-content{
